Login button and horizontal scroll fixed.

--- a/src/features/auth/components/login/login.component.scss
+++ b/src/features/auth/components/login/login.component.scss
@@ -171,6 +171,9 @@
     .form-control {
       margin: 0% 20%;
     }
+    .button-form {
+      margin: 3% 35%;
+    }
 
   }
   
